chkinductive: updated draft

--- a/draft/approach.tex
+++ b/draft/approach.tex
@@ -118,132 +118,60 @@ If there is evidence of the equivalence of $P_0$ and $P_1$, then $P_0
 \equiv P_1$ by synthesizing evidence of $P_0 \equiv P_1$ from a map
 pairs of sequences of derivations of subexpressions of $P_0$ and $P_1$
 to relational invariants.
-%
-\begin{defn}
-  \label{defn:der-structs}
-  % nodes:
-  Let \textbf{(1)} $N$ be a finite space, %
-  % expressions annotations:
-  % invariants annotations:
-  \textbf{(2)} $I: N \to \relinvs{P_0}{P_1}$,
-  % step edges in P0:
-  \textbf{(3)} $S_0 : N \times \instrules{P_0} \partto N$, %
-  % step edges in P1:
-  \textbf{(4)} $S_1 : N \times \instrules{P_1} \partto N$, %
-  % tilings in P0:
-  \textbf{(5)} $T_0 : N \times \subexps{P_0}^{*} \times
-  \subexps{P_0}^{*} \to N$, and
-  % tilings in P1:
-  \textbf{(6)} $T_1 : N \times \subexps{P_1}^{*} \times
-  \subexps{P_1}^{*} \to N$ be such that the following conditions
-  hold.
-  % define the dependence relation:
-  \textbf{(a)} Let $E \subseteq N \times N$ be such that for each $n
-  \in N$, %
-  for each $r \in \instrules{P_0}$ such that $(n, r) \in
-  \domain(S_0)$, it holds that $(S_0(n, r), n) \in E$, %
-  for each $r \in \instrules{P_1}$ such that $(n, r) \in
-  \domain(S_1)$, it holds that $(S_1(n, r), n) \in E$, %
-  for all $n_0, n_1 \in N$, %
-  for all $E_0, E_0' \in \subexps{P_0}^{*}$ such that $T_0(n, E_0, E_0')
-  = (n_0, n_1)$, it holds that $E(n_0, n)$ and $E(n_1, n)$, %
-  for all $E_1, E_1' \in \subexps{P_1}^{*}$ such that $T_1(n, E_1,
-  E_1') = (n_0, n_1)$, it holds that $E(n_0, n)$ and $E(n_1, n)$.
-  %
-  Then $(N, E)$ is a DAG.
-  %
-  \textbf{(b)} For each $n \in N$ and $r \in \instrules{P_0}$ such
-  that $(n, r) \in \domain(S_0)$,
-  % each E0 edge models a step of P0:
-  \[ I(n), \symstep{ P_0 }{ r } \entails I(S_0(n, r))
-  \]
-  %
-  \textbf{(c)} For each $n \in N$ and $r \in \instrules{P_1}$ such
-  that $S_1(n, r)$ is defined,
-  % each E0 edge models a step of P0:
-  \[ I(n), \symstep{ P_1 }{ r } \entails I(S_1(n, r))
-  \]
-  % H has a unique source annotated with empty seqs
-  \textbf{(d)} for each source node $n \in N$ of $H$, it holds that
-  $\true \entails I(n)$, and
-  % H has a unique sink annotated with P0, P1
-  \textbf{(e)} $H$ has a unique sink node $n' \in N$, such that $I(n'),
-  \alpha_0 = \alpha_1 \entails \nu_0 = \nu_1$, %
-  % invariants respect entailments over decompositions:
-  for all $n_0, n_1, n' \in N$, %
-  \textbf{(f)} for all $E_0, E_0' \in \subexps{P_0}^{*}$ such that
-  $T_0(n', E_0, E_0') = (n_0, n_1)$,
-  \[ I(n_0), I(n_1) \entails I(n') \] %
-  \textbf{(g)} for all $E_1, E_1' \in \subexps{P_1}^{*}$ such that 
-  $T_1(n', E_0, E_0') = (n_0, n_1)$, %
-  \[ I(n_0), I(n_1) \entails I(n') \]
-  %
-  Then $(N, I, S_0, S_1, T_0, T_1)$ is a \emph{derivation structure}
-  of $P_0$ and $P_1$.
-\end{defn}
-%
-The space of derivation structures of $P_0$ and $P_1$ is denoted
-$\derstructs{P_0}{P_1}$.
-%
-For each $I \in \dersinvs{P_0}{P_1}$, the components of $I$ are
-denoted $\nodes{I}$, $\invsof{I}$, $\stepedges{P_0}{I}$,
-$\stepedges{P_1}{I}$, $\tilesof{P_0}{I}$, and $\tilesof{P_1}{I}$,
-respectively.
-%
-The sink node of $I$ is denoted $\sinkof{I}$.
-
-% derive map for derivation relational invariants:
-Some derivation structures define invariants of all evaluations of
-sequences of expressions.
-%
+% define tilings:
 For each space $X$, $s, s_0, s_1 \in X^{*}$ if there are some $s_0',
 s_1', s_2' \in X^{*}$ such that $s = s_0' \concat s_1' \concat s_2'$,
 $s_0 = s_0' \concat s_2'$, and $s_1 = s_2' \concat s_1'$, then $s_0$
 and $s_1$ are a \emph{tiling} of $s$.
 %
+Let the space of derivation relations of $P_0$ and $P_1$ be denoted
+$\dersrels{P_0}{P_1} = \derctxs{P_0}^{*} \times
+\derctxs{P_1}^{*} \partto \symrels{P_0}{P_1}$.
+%
 \begin{defn}
-  \label{defn:der-rel-invs}
-  % introduce components of structure:
-  Let $N$, $I : N \to \symrels{P_0}{P_1}$, %
-  $S_0 : N \times \instrules{P_0} \partto N$, %
-  $S_1 : N \times \instrules{P_1} \partto N$, %
-  $T_0 : N \times \subexps{P_0}^{*} \times \subexps{P_0}^{*} \partto
-  N$, and %
-  $T_1 : N \times \subexps{P_1}^{*} \times \subexps{P_1}^{*} \partto
-  N$ be such that $(N, I, S_0, S_1, T_0, T_1) \in
-  \derstructs{P_0}{P_1}$.
-
-  % introduce map over subexpressions of P0
-  Let there be some $E_0 : N \to \subexps{P_0}^{*}$ that satisfies the
-  following conditions.
-  % maps sink to just P0:
-  \textbf{(a)} $E_0(\sinkof{I}) = [ P_0 ]$;
-  % respects steps in P0:
-  \textbf{(b)} for each $n \in N$ and $r \in \instrules{P_1}$ such
-  that $S_0(n, r)$ is defined, and for $e_0 \in \subexps{P_0}$ and $E'
-  \in \subexps{P_0}^{*}$ such that $E_0(n) = e_0 \cons E'$, it holds
-  that $E_0( S_0(n, r) ) = \rulepreds{r} \concat E'$;
-  % respects splits:
-  \textbf{(c)} for each $n' \in N$ and all $F_0, F_1 \in
-  \subexps{P_0}$ such that $(F_0, F_1)$ is a tiling of $E_0(n')$,
-  there are some $n_0, n_1 \in N$ such that $T_0(n', F_0, F_1) = (n_0,
-  n_1)$, with $E_0(n_0) = F_0$ and $E_0(n_1) = F_1$.
-
-  % punt on expression map for P1:
-  Let there be some $E_1 : N \to \subexps{P_1}^{*}$ that is defined
-  symmetrically for $P_1$.
-
-  % give it a name:
-  Then $I$ are \emph{derivation relational invariants} of $P_0$ and
-  $P_1$.
+  \label{defn:der-structs}
+  Let $I \in \dersrels{P_0}{P_1} $ be such that
+  % maps empty contexts to invariant that supports equivalence:
+  \textbf{(1)} $I([ \epsilon ], [ \epsilon ]), \alpha_0 = \alpha_1
+  \entails \nu_0 = \nu_1$;
+  % respects semantics of evaluation rules of P0:
+  \textbf{(2)} for all $\gamma_0 \in \derctxs{P_0}$, %
+  $D_0 \in \derctxs{P_0}^{*}$, %
+  $D_1 \in \derctxs{P_1}^{*}$, and %
+  each $r \in \evalrules$ such that for all $0 \leq i < \degreeof(r)$,
+  $(((r, i) \cons \gamma_0) \cons D_0, D_1) \in \domain(I)$, 
+  \[ \setformer{ I(((r, i) \cons \gamma_0) \cons D_0, D_1) }{ %
+    0 \leq i < \degreeof(r) }, \symstep{ ... }{ ... } \entails %
+  I( d_0 \cons D_0, D_1)
+  \]
+  %
+  \BH{complete}
+  % respects semantics of evaluation rules of P1:
+  \textbf{(3)} for all $D_0 \in \derctxs{P_0}^{*}$, %
+  each $\gamma_1 \in \derctxs{P_1}$, %
+  all $D_1 \in \derctxs{P_1}^{*}$, and %
+  each $r \in \evalrules$ such that for all $0 \leq i < \degreeof(r)$,
+  $(D_0, ((r, i) \cons \gamma_1) \cons D_1) \in \domain(I)$, 
+  \[ \setformer{ I( D_0, ( ( (r, i) \cons \gamma_1 ) \cons D_1) )}
+  \entails %
+  I( D_0, \gamma_1 \cons D_1 )
+  \]
+  % respects tiling in P0:
+  \textbf{(4)} for all $D_0, D_0', D_0'' \in \subders{P_0}^{*}$ such
+  that $D_0'$ and $D_0''$ are a tiling of $D_0$ and all $D_1 \in
+  \subders{P_1}^{*}$ such that $(D_0, D_1) \in \domain(I)$,
+  \[ I(D_0', D_1), I(D_0'', D_1) \entails I(D_0, D_1) \]
+  % respects tiling in P1:
+  \textbf{(5)} for all $D_0 \in \subders{P_0}^{*}$ and all $D_1, D_1',
+  D_1'' \in \subders{P_1}^{*}$ such that $D_1'$ and $D_1''$ are a
+  tiling of $D_1$ and $(D_0, D_1) \in \domain(I)$,
+  \[ I(D_0, D_1'), I(D_0, D_1'') \entails I(D_0, D_1) \]
 \end{defn}
 %
-The space of all derivation relational invariants for $P_0$ and $P_1$
+The space of all derivation relational invariants of $P_0$ and $P_1$
 is denoted $\dersinvs{P_0}{P_1}$.
 %
-For each $I \in \dersinvs{P_0}{P_1}$, the expression maps $E_0$ and
-$E_1$ defined in \autoref{defn:der-rel-invs} are denoted
-$\dersexps{P_0}{I}$ and $\dersexps{P_1}{I}$, respectively.
+\BH{update references to defn}
 %
 \BH{reference running example}
 
@@ -251,36 +179,34 @@ $\dersexps{P_0}{I}$ and $\dersexps{P_1}{I}$, respectively.
 Derivation relational invariants are inductive if they define
 relational invariants.
 %
-In particular, for $I \in \derstructs{P_0}{P_1}$, let $I' \in
+In particular, for $I \in \dersinvs{P_0}{P_1}$, let $I' \in
 \relinvs{P_0}{P_1}$ be such that for all $E_0 \in \subexps{P_0}^{*}$
 and $E_1 \in \subexps{P_1}^{*}$,
 \begin{align*}
   % the invariant of the sequences of expressions is
   \exprel{I'}(E_0, E_1) = %
   % the conjunction of invariants over all nodes:
-  \bigland \setformer{ I(n_0, n_1) }{ %
-    n_0, n_1 \in \nodes{I},
-    % that are annotated with the expression sequences
-    \dersexps{P_0}{I}(n_0) = E_0, \dersexps{P_1}{I}(n_1) = E_1 }
+  \bigland \setformer{ I(\headexps(\Gamma_0), \headexps(\Gamma_1)) }{ %
+    \Gamma_0 \in \derctxs{ P_0 }, \Gamma_1 \in \derctxs{ P_1 } } 
 \end{align*}
 %
-$I \in \derstructs{P_0}{P_1}$ are inductive if they can be decomposed
-to form derivation structures that define relational invariants of
-$P_0$ and $P_1$.
+$I \in \dersinvs{P_0}{P_1}$ are inductive if they can be decomposed to
+form derivation relations that define relational invariants of $P_0$
+and $P_1$.
 %
-For all $I_0, I_1 \in \derstructs{P_0}{P_1}$, let $I_0 \union I_1 =
-(\nodes{I_0} \union \nodes{I_1}, I', %
-\stepedges{P_0}{I_0} \union \stepedges{P_0}{I_1}, %
-\stepedges{P_1}{I_1} \union \stepedges{P_1}{I_1}, %
-\tilesof{P_0}{I_0} \union \tilesof{P_0}{I_1}, %
-\tilesof{P_1}{I_1} \union \tilesof{P_1}{I_1})$, where %
-for all $n \in \nodes{I_0} \setminus \nodes{I_1}$, 
-$\restrict{I'}{N_0 \setminus N_1} = \restrict{I_0}{N_0 \setminus
-  N_1}$, %
-$\restrict{I'}{N_1 \setminus N_0} = \restrict{I_0}{N_1 \setminus
-  N_0}$, and %
-for each $n \in N_0 \intersection N_1$, $I'(n) = I_0(n) \land
-I_1(n)$.
+For all $I_0, I_1 \in \dersrels{P_0}{P_1}$, let $I_0 \union I_1$ 
+be such that 
+% case: domain of only I0
+\textbf{(1)} $\restrict{I_0 \union I_1}{\domain(I_0) \setminus
+  \domain(I_1)} = \restrict{I_0}{\domain(I_0) \setminus \domain(I_1)}$;
+% case: domain of only I1
+\textbf{(2)} $\restrict{I_0 \union I_1}{\domain(I_1) \setminus
+  \domain(I_0)} = \restrict{I_1}{\domain(I_1) \setminus
+  \domain(I_0)}$;
+% case: domain of only both
+\textbf{(3)} for each $\Gamma \in \domain(I_0) \intersection
+\domain(I_1)$, $\restrict{I_0 \union I_1}(\Gamma) = I_0(\Gamma) \land
+I_1(\Gamma)$.
 %
 \begin{defn}
   \label{defn:inductive-der-rels}
@@ -396,66 +322,79 @@ with relational invariants in both $I$ and $I'$.
 \subsubsection{Determining inductiveness of derivation invariants}
 \label{sec:chk-ind}
 % algorithm for checking inductiveness:
-\begin{figure}
-  \centering
-  \begin{algorithm}[H]
-    % Declare IO markers.
-    \SetKwInOut{Input}{Input}
-    % 
-    \SetKwInOut{Output}{Output}
-    % Declare sub-program (procedure) markers.
-    \SetKwProg{myproc}{Procedure}{}{}
-    % Inputs: a program
-    \Input{$D \in \dersinvs{P_0}{P_1}$.}
-    % Output: decision for safety
-    \Output{$\isind$ to denote that some restriction of $D$ is
-      inductive, or derivations of $P_0$ and $P_1$ not defined in $D$.}
-    % verify: main procedure
-    \myproc{$\chkinductive(D)$ \label{line:chkind-begin}} %
-    { \myproc{$\chkindaux(n, I)$ %
-        \label{line:chkind-aux-begin} } %
-      { % n is inductive under D,
-        $E_n \assign %
-        (\dersexps{P_0}{D}(n), \dersexps{P_1}{D}(n))$ %
-        \label{line:bind-exps} \;
-        $\varphi_n \assign I(E_n)$ \label{line:bind-invs} \;
-        \lIf{$\varphi_n \entails \dersrelinvs{D}(n)$ %
-          \label{line:chkind-is-entailed} } {
-          % case: node is inductive:
-          \Return{$\isind$} } %
-        % 
-        \Else{ %
-          $I' = \upd{I}{ E_n }{ \varphi_n \land \invsof{ I }(n) }$ %
+\begin{algorithm}[t]
+  % Declare IO markers.
+  \SetKwInOut{Input}{Input}
+  % 
+  \SetKwInOut{Output}{Output}
+  % Declare sub-program (procedure) markers.
+  \SetKwProg{myproc}{Procedure}{}{}
+  % Inputs: a program
+  \Input{$D \in \dersinvs{P_0}{P_1}$.}
+  % Output: decision for safety
+  \Output{$\isind$ to denote that some restriction of $D$ is
+    inductive, or derivations of $P_0$ and $P_1$ not defined in $D$.}
+  % verify: main procedure
+  \myproc{$\chkinductive(D)$ \label{line:chkind-begin}} %
+  { \myproc{$\chkindaux(\Gamma_0, \Gamma_1, I)$ %
+      \label{line:chkind-aux-begin} } %
+    { % bind the expressions of Gamma:
+      $E \assign (\headexps(\Gamma_0), \headexps(\Gamma_1))$ %
+      \label{line:chkind-bind-exps} \;
+      % if Gamma is not defined,
+      \lIf{$(\Gamma_0, \Gamma_1) \notin \domain(D)$}{ %
+        % return a sequence of derivations of the head expressions
+        \Return{$\chooseder(E)$} \label{line:chkind-counters} %
+      }
+      % 
+      \Else{ %
+        $\varphi_E \assign I(E)$ \label{line:bind-exp-invs} \; %
+        $\varphi_{\Gamma} \assign D(\Gamma_0, \Gamma_1)$ %
+        \label{line:bind-der-invs} \; %
+        \lIf{$\varphi_E \entails \varphi_{\Gamma}$}{ %
+          \Return{$\isind$} \label{line:ret-isind} %
+        } %
+        \Else{
+          % strengthen the invariants at E:
+          $I' = \upd{I}{ E }{ \varphi_E \land \varphi_{\Gamma} }$ %
           \label{line:str-invs} \; %
           $\tileind_0 \assign %
           \biglor \setformer{ %
-            \chkindaux(n_0, I') = \chkindaux(n_1, I') = \isind }{ %
-            n_0, n_1 \in \nodes{D}, E_0, E_0' \in \subexps{P_0}^{*},
-            \tilesof{P_0}{D}(n, E_0, E_0') = (n_0, n_1) }$ %
-            \label{line:det-is-ind0} \; %
+            \chkindaux(\Gamma_0', \Gamma_1, I') = %
+            \chkindaux(\Gamma_0'', \Gamma_1, I') = \isind }{ %
+            \Gamma_0', \Gamma_0'' \in \derctxs{P_0}, %
+            \tiles(\Gamma_0, \Gamma_0', \Gamma_0'') }$ %
+          \label{line:tile-isind0} \; %
           $\tileind_1 \assign %
           \biglor \setformer{ %
-            \chkindaux(n_0, I') = \chkindaux(n_1, I') = \isind }{ %
-              n_0, n_1 \in \nodes{D}, E_1, E_1' \in \subexps{P_1}^{*},
-              \tilesof{P_1}{D}(n, E_1, E_1') = (n_0, n_1) }$ %
-            \label{line:det-is-ind1} \; %
+            \chkindaux(\Gamma_0, \Gamma_1', I') = %
+            \chkindaux(\Gamma_0, \Gamma_1'', I') = \isind }{ %
+            \Gamma_1', \Gamma_1'' \in \derctxs{P_1}, %
+            \tiles(\Gamma_1, \Gamma_1', \Gamma_1'') }$ %
+          \label{line:tile-isind1} \; %
           \lIf{$\tileind_0 \lor \tileind_1$}{ %
-            \Return{$\isind$} \label{line:decomp-isind} } %
+            \Return{$\isind$} \label{line:tile-isind} %
+          } %
           \lElse{ %
-            \Return{$\chooseres( %
-              \unwind{ P_0 }(n, D, I'), %
-              \unwind{ P_1 }(n, D, I'))$ %
-              \label{line:chkind-unwind} } } } %
-      \label{line:chkind-aux-end} } %
-    \Return{$\chkindaux(\sinkof{D}, \lambda x.\ \true)$} %
-    \label{line:chkind-base} } %
-    % 
-    \caption{% interface of chkinductive:
-      \chkinductive: determines the inductiveness of derivation
-      relational invariants. }
-    \label{alg:chk-ind}
-  \end{algorithm}
-\end{figure}
+            \Return{ $\chooseres( %
+              \unwind{ P_0 }(\Gamma_0, \Gamma_1, I'), %
+              \unwind{ P_1 }(\Gamma_0, \Gamma_1, I'))$ } %
+            \label{line:ret-unwind} %
+          } %
+        } %
+        \label{line:chkind-aux-end} 
+      } %
+    } 
+    \Return{$\chkindaux(\epsilon, \epsilon, \lambda x.\ \true)$} %
+    \label{line:chkind-base} 
+  } %
+  \caption{ % interface of chkinductive:
+    \chkinductive: determines the inductiveness of derivation
+    relational invariants. }
+  \label{alg:chk-ind}
+\end{algorithm}
+%
+\BH{update to walk through new algorithm}
 %
 The algorithm \chkinductive for checking the inductiveness of
 derivation relational invariants is given in
@@ -463,61 +402,75 @@ derivation relational invariants is given in
 %
 \chkinductive, given derivation relational invariants $D$
 (\autoref{line:chkind-begin}), defines a procedure \chkindaux that
-takes $n \in \nodes{D}$ and $I: \subexpseqs \to \symrels{P_0}{P_1}$
-and returns either %
+takes $\Gamma_0 \in \derctxs{P_0}^{*}$, $\Gamma_1 \in
+\derctxs{P_1}^{*}$, and $I: \subexpseqs \to \symrels{P_0}{P_1}$ and
+returns either %
 \textbf{(1)} $\isind$ to denote that if $I$ are inductive relational
-invariants, then $\dersexps{P_0}{D}(n), \dersexps{P_1}{D}(n)$ have
-inductive relational invariants that entail $I$ or
+invariants, then $D(\Gamma_0, \Gamma_1)$ have inductive relational
+invariants that entail $I$ or
 %
-\textbf{(2)} derivations of the expressions in $\dersexps{P_0}{D}(n)$
-that are not defined in $D$
+\BH{clarify}
+%
+\textbf{(2)} derivations of $P_0$ and $P_1$ with relational invariants
+in $D$
 (\autoref{line:chkind-aux-begin}---\autoref{line:chkind-aux-end}).
 %
-If case \textbf{(1)} holds, we say that $n$ in $D$ is inductive under
-$I$.
+If case \textbf{(1)} holds, we say that $(\Gamma_0, \Gamma_1)$ is
+inductive in $D$ under $I$.
 %
-\chkinductive calls \chkindaux on the head of the $D$ and a map from
-each pair of sequences of sub-expressions to $\true$, and returns the
-result (\autoref{line:chkind-base}).
+\chkinductive calls \chkindaux on the empty derivation contexts of
+$P_0$ and $P_1$ and a map from each pair of sequences of
+sub-expressions to $\true$, and returns the result
+(\autoref{line:chkind-base}).
 
-% auxiliary function: check entailment in context:
-\chkindaux, given $n \in \nodes{D}$, $I : \subexpseqs \to
-\symrels{P_0}{P_1}$, collects the pair of sequences of sub-expressions
-$E_n$ of $P_0$ and $P_1$ bound to $n$ in $D$
-(\autoref{line:bind-exps}), and then collects the relational
-invariants $\varphi_n$ bound to $E_n$ in $I$
-(\autoref{line:bind-invs}).
+% aux function: contexts have no invariant:
+\chkindaux collects the pair $E$ of sequences of expressions of the
+derivation contexts in $\Gamma_0$ and $\Gamma_1$
+(\autoref{line:chkind-bind-exps}), and then determines if $(\Gamma_0,
+\Gamma_1)$ has relational invariants defined in $D$.
 %
-\chkindaux then tests if $\varphi_n$ entails the relational invariant
-of $n$ in $D$;
-% 
-if so, then \chkindaux returns that $n$ is inductive under $I$
-(\autoref{line:chkind-is-entailed}).
-% check if some decomposition is entailed
-Otherwise, \chkindaux constructs relational invariants $I'$ over
-sub-expression sequences that strengthen $I$ at $E_n$ with $\varphi_n$
+If not, then \chkindaux returns a sequence of derivations of all
+expressions in $E$ (\autoref{line:chkind-counters}).
+
+% aux function: subcase: invariants are entailed by invariants in I:
+Otherwise, \chkindaux collects the relational invariants $\varphi_E$
+bound to $E$ in $I$ (\autoref{line:bind-exp-invs}), %
+collects the derivation relational invariants $\varphi_{\Gamma}$ bound
+to $\Gamma_0$ and $\Gamma_1$ (\autoref{line:bind-der-invs}), and %
+determines if $\varphi_E$ entails $\varphi_{\Gamma}$.
+%
+If so, then \chkindaux returns that $\Gamma_0$ and $\Gamma_1$ are
+inductive in $D$ under $I$ (\autoref{line:ret-isind}).
+
+% aux fn: subcase: some tiling is inductive
+Otherwise, \chkindaux constructs relational invariants $I'$ over that
+strengthen $I$ at $E$ with $\varphi_{\Gamma}$
 (\autoref{line:str-invs}).
 %
-\chkindaux determines if there is some tiling $n_0, n_1 \in N$ of $n$
-under either $P_0$ (\autoref{line:det-is-ind0}) or $P_1$
-(\autoref{line:det-is-ind1}) such that each of $n_0$ and $n_1$ are
-inductive under $I'$.
+\chkindaux determines if either there is some tiling of $\Gamma_0$
+such that each tile paired with $\Gamma_1$ is inductive in $D$ under
+$I$ (\autoref{line:tile-isind0}), or there is some tiling of
+$\Gamma_1$ such that $\Gamma_0$ paired with each tile is inductive in
+$D$ under $I$ (\autoref{line:tile-isind1}).
 %
-If so, then \chkindaux returns that $n$ is inductive under $I$
-(\autoref{line:decomp-isind}).
+If so, then \chkindaux returns that $\Gamma_0$ and $\Gamma_1$ are
+inductive under $I'$ (\autoref{line:tile-isind}).
 
-% case: unwind
-Otherwise, \chkindaux runs the procedure $\unwind{P_0}$ and on $n$,
-$D$, $I'$, which returns either \textbf{(1)} $\isind$ to denote that
-the components under each evaluation rule that can be applied to the
-sub-expressions of $P_0$ in $\dersexps{D}(n)$ are inductive or %
-\textbf{(2)} returns derivations of $\dersexps{D}(n)$ that do not have
-relational invariants in $\invsof{D}$;
+% aux fn: subcase: unwind
+Otherwise, \chkindaux runs the procedure $\unwind{P_0}$ on $\Gamma_0$,
+$\Gamma_1$, and $I'$, which returns either \textbf{(1)} $\isind$ to
+denote that each predecessor of $\Gamma_0$ under $P_0$
+%
+\BH{define predecessor function}
+%
+paired with $\Gamma_1$ is inductive in $D$ under $I'$ or %
+\textbf{(2)} returns derivations of $E$ that do not have invariants in
+$D$;
 %
 the implementation of $\unwind{P_0}$ is defined below.
 %
-\chkindaux runs a similar procedure $\unwind{P_1}$ on $n$, $D$, and
-$I'$.
+\chkindaux runs a similar procedure $\unwind{P_1}$ on $\Gamma_0$,
+$\Gamma_1$, and $I'$.
 % chooseres:
 \chkindaux runs \chooseres on the results of the two calls.
 %
@@ -529,37 +482,29 @@ the call to $\unwind{P_1}$.
 
 \paragraph{Implementation of \textsc{unwind}}
 %
-$\unwind{P_0}$, given $D \in \dersinvs{P_0}{P_1}$, $n \in \nodes{D}$,
-and $I \in \dersinvs$, determines if $n$ is inductive in $D$ under $I$
-by performing the following steps.
-% case: empty sequence of derivations:
-For $E = \dersexps{P_0}(D)(n)$, $\unwind{P_0}$ first determines if $E
-= \epsilon$.
+$\unwind{P_0}$, given $\Gamma_0 \in \derctxs{P_0}^{*}$, $\Gamma_1 \in
+\derctxs{P_1}^{*}$, and $I : \subexpseqs \partto \symrels{P_0}{P_1}$,
+first determines if $\Gamma_0 = \epsilon$.
 %
 If so, then $\unwind{P_0}$ returns the empty sequence of derivations.
 
 % case: non-empty sequence of derivations:
-Otherwise, let $e \in \subexps{P_0}$, $E' \in \subexps{P_0}^{*}$ be
-such that $E = e \cons E'$.
+Otherwise, let $\gamma_0 \in \derctxs{P_0}$ and $\Gamma_0' \in
+\derctxs{P_0}$ be such that $\Gamma_0 = \gamma_0 \cons \Gamma_0'$.
 %
-For each $r \in \evalrules$ and $E_r \in \subexps{P_0}^{*}$ such that
-$E_r$ step to $e$ on $r$ in $P_0$, checks if there is some $n_r \in
-\nodes{D}$ such that $\dersexps{P_0}{D} = E_r \concat E'$, and if so,
-runs \chkindaux on $n_r$, $D$, and $I'$.
+For each $r \in \instrules{P_0}$ that extends $\gamma_0$ in $P_0$ and
+each $0 \leq i < \degreeof(r)$, $\unwind{P_0}$ runs \chkindaux on
+$(((r, i) \cons \gamma_0) \cons \Gamma_0, \Gamma_1$.
 %
-If for each $r$ there is such an $n_r$ and $\chkindaux(D, n_r, I') =
-\isind$, then $\unwind{P_0}$ returns $\isind$.
+If for each $r$ and $i$, \chkindaux returns $\isind$, then
+$\unwind{P_0}$ returns $\isind$.
 %
-Otherwise, if there is some $r$ for which there is no such $n_r$, then
-\chkindaux returns a sequence of derivations for $E$ consisting of a
-derivation for $e$ rooted at $r$, followed by arbitrary derivations of
-the expressions in $E'$.
-%
-Otherwise---in which case there is some $r' \in \evalrules$ with
-$n_{r'} \in \nodes{D}$, $D, D' \in \ders{P_0}^{*}$ such that $D$ are
-derivations of $E_{r'}$ and $\chkindaux(n_{r'}, D, I') = D \concat
-D'$, $\unwind{P_0}$ returns the derivation sequence consisting of $r'$
-applied to $D$, followed by $D'$.
+Otherwise, if there is some $r$ and $0 \leq i < \degreeof(r)$ such
+that \chkindaux returns a sequence of derivations $D \in \ders{P_0}$
+for $\headexps(\rulepreds(r))$, then $\unwind{P_0}$ returns a
+derivation for $\headexps(\rulesucc(r))$ constructed from $D$ and $r$,
+along with derivations for $\headexps(\Gamma_0')$ and
+$\headexps(\Gamma_1)$.
 
 % handwave P1:
 The implementation of $\unwind{P_1}$ is symmetric to that of
