--- a/draft/shorthand.tex
+++ b/draft/shorthand.tex
@@ -43,21 +43,19 @@
 
 \newcommand{\degreeof}{\mathsf{deg}}
 
+\newcommand{\derctxs}[1]{\mathsf{DerCtxs}[ #1 ]}
+
 \newcommand{\derrule}[1]{\mathsf{DerRule}[ #1 ]}
 
 \newcommand{\ders}[1]{\mathsf{Ders}[ #1 ]}
 
 \newcommand{\derschc}{\textsc{DersCHC}\xspace}
 
-\newcommand{\dersexps}[2]{\mathsf{Exps}[ #1 ]( #2 )}
-
 \newcommand{\dersinvs}[2]{\mathsf{DersInvs}[ #1, #2 ]}
 
 \newcommand{\dersrelinvs}[1]{\mathsf{DersRels}[ #1 ]}
 
 \newcommand{\dersrels}[2]{\mathsf{DersRels}[ #1, #2 ]}
-
-\newcommand{\derstructs}[2]{\mathsf{DerStructs}[ #1, #2 ]}
 
 \newcommand{\dersubtrees}[1]{\mathsf{DerSubTrees}[ #1 ]}
 
@@ -82,6 +80,8 @@
 \newcommand{\hastype}{\vdash}
 
 \newcommand{\head}[1]{\mathsf{hd}[ #1 ]}
+
+\newcommand{\headexps}{\mathsf{Hd}}
 
 \newcommand{\headof}[1]{\mathsf{Head}_{#1}}
 
@@ -157,7 +157,7 @@
 
 \newcommand{\symvarsidx}[2]{\mathsf{SymVarsIdx}[ #1, #2 ]}
 
-\newcommand{\tileind}{\mathsf{ind}}
+\newcommand{\tileind}{\mathsf{i}}
 
 \newcommand{\tiles}{\mathsf{Tiles}}
 
