updates defn of verifyders

--- a/draft/background.tex
+++ b/draft/background.tex
@@ -476,8 +476,8 @@ then $\sigma$ is a \emph{partial solution} of $\mathcal{S}$.
 If, in addition, $\sigma(\queryof{ \mathcal{S} }) \entails \false$,
 then $\sigma$ is a \emph{solution} of $\mathcal{S}$.
 
-% 
-\BH{introduce solver}
+% introduce solver:
+\sys is defined as using a CHC solver, named $\solvechc$.
 
 %%% Local Variables: 
 %%% mode: latex
