--- a/draft/shorthand.tex
+++ b/draft/shorthand.tex
@@ -43,6 +43,8 @@
 
 \newcommand{\degreeof}{\mathsf{deg}}
 
+\newcommand{\derexts}[1]{\mathsf{DerExts}[ #1 ]}
+
 \newcommand{\derctxs}[1]{\mathsf{DerCtxs}[ #1 ]}
 
 \newcommand{\derrule}[1]{\mathsf{DerRule}[ #1 ]}
@@ -89,6 +91,8 @@
 
 \newcommand{\instrules}[1]{\mathsf{InstRules}[ #1 ]}
 
+\newcommand{\instrulepreds}[1]{\mathsf{InstPreds}[ #1 ]}
+
 \newcommand{\interps}[1]{\mathsf{Interps[ #1 ]}}
 
 \newcommand{\invsof}[1]{\mathsf{Invs}[ #1 ]}
@@ -112,6 +116,8 @@
 \newcommand{\nonequiv}{\mathsf{NonEquiv}}
 
 \newcommand{\ops}{\mathsf{ops}}
+
+\newcommand{\prevrule}[1]{\mathsf{Prev}[ #1 ]}
 
 \newcommand{\queryof}[1]{\mathsf{Query}_{#1}}
 
