--- a/draft/approach.tex
+++ b/draft/approach.tex
@@ -515,7 +515,8 @@ $\unwind{P_0}$.
 %
 \verifyders, given $d_0 \in \dertrees{ P_0 }{ P_0 }$ and %
 $d_1 \in \dertrees{ P_1 }{ P_1 }$, returns either \textbf{(1)}
-derivation relational invariants of $d_0$ and $d_1$ or %
+derivation relational invariants of the derivation contexts of $d_0$
+and $d_1$ or %
 \textbf{(2)} the value $\nonequiv$ to denote that $d_0 \not\equiv
 d_1$.
 %
@@ -525,68 +526,74 @@ solving a recursion-free system of Constrained Horn Clauses
 
 % define relational predicates:
 Each relational predicate of $\mathcal{S}$ is a pair of a sequence of
-adjacent sub-derivations of $d_0$, paired with a sequence of adjacent
-sub-derivations of $d_1$.
+derivation contexts of $d_0$, paired with a sequence of derivation
+contexts of $d_1$.
 % define cuts
 \verifyders constructs a system $\mathcal{S}$, defined as follows.
 %
-Let the \emph{cuts} of $d_0$, denoted $\cuts{d_0} \subseteq
-\subders{d_0}^{*}$, be the smallest set such that %
-\textbf{(1)} $[ d_0 ] \in \cuts{d_0}$; %
-\textbf{(2)} for all $d_0' \in \subders{d_0}$ and $D_0'' \in
-\subders{d_0}$ such that $d_0' \cons D_0'' \in \cuts{d_0}$,
-$\immsubders{d_0'} \concat D_0'' \in \cuts{d_0}$.
+Let the \emph{cuts} of $d_0$, denoted $\cuts{d_0} \subseteq \derctxs{
+  P_0 }^{*}$, be the smallest set such that %
+\textbf{(1)} $[ \epsilon ] \in \cuts{d_0}$; %
+\textbf{(2)} for all $\gamma_0' \in \derctxs{ d_0 }$, %
+$\Gamma_0'' \in \derctxs{ d_0 }^{*}$ such that $\gamma_0' \cons
+\Gamma_0'' \in \cuts{ d_0 }$, and %
+$p \in \rulepreds{P_0}$ such that $\gamma_0'' = p \cons \gamma_0' \in
+\derctxs{ d_0 }$, %
+it holds that $\immsubders{d_0'} \concat D_0'' \in \cuts{d_0}$.
 %
 The cuts of $d_1$, denoted $\cuts{d_1}$, are defined symmetrically.
 % define relational predicates per tiling:
 The relational predicates of $\mathcal{S}$ are $\cuts{d_0} \times
 \cuts{d_1}$.
 %
-For each $d \in \subders{d_0}$, let there be a distinct copy of
-symbolic variables for the expression derived by $d$, denoted
+For each $\gamma \in \derctxs{d_0}$, let there be a distinct copy of
+the symbolic variables for the expression of $\gamma$, denoted
 $\symvars{d}$.
 %
-For each $D \subseteq \subders{d_0}$, let the union of symbolic
+For each $D \subseteq \derctxs{d_0}$, let the union of symbolic
 variables for all derivations in $D$ be denoted $\symvars{D}$.
 %
 For each $C_0 \in \cuts{d_0}$ and $C_1 \in \cuts{d_1}$, relational
 predicate $(C_0, C_1)$ has symbolic variables $\symvars{C_0},
 \symvars{C_1}$.
 %
-Each occurrence of $(C_0, C_1)$ is implicitly applied to its symbolic
-variables.
+In each application of $(C_0, C_1)$, it is applied to these variables;
+%
+as a result, such variables are not denoted explicitly below.
 
 % give clauses for steps of P0:
 The clauses of $\mathcal{S}$ are defined as follows.
 %
-Each evaluation rule applied to construct $d_0$ is modeled by a set of
-clauses in $\mathcal{S}$.
-% for each derivation,
-In particular, for each $r \in \instrules{P_0}$ and $D_0'' \in
-\subders{ d_0 }$ such that $d_0' = (D_0'', r) \in \subders{ d_0 }$, %
-each $C_0 \in \cuts{d_0}$ such that $d_0' \cons C_0 \in \cuts{ d_0 }$,
-and %
-$C_1 \in \cuts{ d_1 }$, there is a clause %
-\[ (D_0'' \concat C_0, C_1), %
-\symstep{ P_0 }{ r }[ \symvars{ D_0'' }, d_0' ] \entails %
-(d_0' \cons C_0, C_1) \]
+Each evaluation rule applied in $d_0$ corresponds to a clause in
+$\mathcal{S}$.
+% 
+In particular, for each $\gamma_0 \in \derctxs{ d_0 }$ with $\Gamma_0
+= \derexts{ d_0 }( \gamma_0 )$, %
+$\Gamma_0' \in \derctxs{ d_0 }^{*}$ such that $\gamma_0 \cons
+\Gamma_0' \in \cuts{ d_0 }$, and %
+$\Gamma_1 \in \cuts{ d_1 }$, there is a clause %
+\[ (\Gamma_0 \concat C_0, C_1), %
+\symstep{ P_0 }{ \prevrule{ d_0 }( \gamma_0 ) }[ %
+\symvars{ \Gamma_0 }, \gamma_0 ] \entails %
+(\gamma_0 \cons C_0, C_1) \]
 
 % give clauses for steps of P1:
-Each evaluation rule applied to construct $d_1$ is modeled by clauses
-of $\mathcal{S}$.
+Each evaluation rule applied in $d_1$ corresponds to a clause in
+$\mathcal{S}$.
 %
-In particular, for each $r \in \instrules{P_1}$ and $D_1'' \in
-\subders{d_1}$ such that $d_1' = (D_1'', r) \in \subders{ d_1 }$, %
-each $C_0 \in \cuts{d_0}$, and %
-each $C_1 \in \cuts{ d_1 }$ such that $d_1' \cons C_1 \in \cuts{d_1}$,
-there is a clause
-\[ (C_0, D_1'' \concat C_1), %
-\symstep{ P_1 }{ r }[ \symvars{ D_1'' }, d_1' ] \entails %
-(C_0, d_1' \cons C_1) \]
+In particular, for each $C_0 \in \cuts{ d_0 }$, %
+each $\gamma_1 \in \derctxs{ d_1 }$ with $\Gamma_1 = \derexts{d_1}(
+\gamma_1 )$, and %
+$\Gamma_1' \in \derctxs{ d_1 }^{*}$ such that $\gamma_1 \cons
+\Gamma_1' \in \cuts{ d_1 }$, there is a clause
+\[ ( \Gamma_0, \Gamma_1 \concat C_1), %
+   \symstep{ P_1 }{ \prevrule{ d_1 }( \gamma_1 ) }[ %
+   \symvars{ \Gamma_1 }, \gamma_1 ] \entails %
+   (C_0, \gamma_1 \cons C_1) \]
 
 % split into P0 and P1 tilings
 $\mathcal{S}$ contains clauses that constrain that the invariants for
-tilings of a sequence of sub-derivations of $d_0$ must entail the
+tilings of a sequence of derivation contexts of $d_0$ must entail the
 relational invariant for the sequence that they tile.
 %
 In particular, for all $C_0, C_0', C_0'' \in \cuts{d_0}$ such that
@@ -604,11 +611,21 @@ there is a clause
 
 % point out which relational predicate is the query:
 The query relational predicate of $\mathcal{S}$ is, by the above
-construction, $( [ D_0 ], [ D_1 ])$.
+construction, the empty derivation context of $d_0$ paired with the
+empty derivation context of $d_1$: $( [ \epsilon ], [ \epsilon ])$.
 
 % talk about how interpretation for S is translated to derivation
 % relational invariants:
-\verifyders runs the CHC solver 
+\verifyders runs the CHC solver \solvechc on $\mathcal{S}$.
+%
+If \solvechc returns that $\mathcal{S}$ has no solution, then
+\verifyders returns $\nonequiv$, to denote that $D_0 \not\equiv D_1$.
+%
+Otherwise, if \solvechc returns some $\sigma \in \interps{ \mathcal{S}
+}$, then \verifyders returns $I \in \dersinvs{P_0}{P_1}$, where for
+each $\Gamma_0 \in \derctxs{ P_0 }$ and $\Gamma_1 \in \derctxs{ P_1
+}$, $I(\Gamma_0, \Gamma_1) = \subs{ \sigma(\Gamma_0, \Gamma_1) }{
+  \symvars{ \headexps{ \Gamma_0 } }, \symvars{ \Gamma_1 } }$.
 
 \subsubsection{Merging Derivation Relational Invariants}
 % mergeinvs: give components of invariants 0:
